--- a/greedy_function_approximation_a_gradient_boosting_machine.ipynb
+++ b/greedy_function_approximation_a_gradient_boosting_machine.ipynb
@@ -903,13 +903,84 @@
     "<br/>\n",
     "<br/>\n",
     "gives the best steepest-descent step direction $-g_m = \\{ -g_m(x_i)\\}_1^N$ in the N-dimensional data space at $F_{m-1}(x)$\n",
+    "</i>\n",
+    "\n",
+    "What this is saying, is that we create a vector of made up N components, where a single component is $L(y_i, \\hat{y_i})$. By taking the gradient of this vector, and taking a step in the opposite direction of this gradient, we are approaching a point in this space where the loss becomes a minima."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16e383c9-fd2c-4db5-a8a8-223142e35ed8",
+   "metadata": {},
+   "source": [
+    "> <i>However, this gradient is only defined only at the data points $\\{ x_i\\}_i^N$ and cannot be generalized to other x-values. One possibility for generalization is to choose that member of the parameterized class $h(x; a_m)$ that produces $h_m = \\{ h(x_i; a_m \\}_{1}^N$ most parallel to $-g_m \\in R^N$. This is the $h(x; a)$ most highly correlated with $-g_m(x)$ over the data distribution. It can be obtained from the solution:\n",
+    "<br />\n",
+    "<br />\n",
+    "$a_m = \\text{argmin}_{a, \\beta} \\sum_i^N [-g_m(x) - \\beta h(x_i; a)]^2$\n",
+    "</i>\n",
+    "\n",
+    "Realize, we are back to a parameterized model. But what's novel here, is that are trying to learn the gradient of the loss function. The $h(x_i; a)$ is now a model that is trying to replicate the loss gradient. So this is a different type of learning. We can call this \"gradient learning\".\n",
+    "\n",
+    "Now, because of this, a new and different cost function is introduced. Here, the author chooses least squares (but of course other cost functions can be used). By learning the gradient, this allows the model to be defined for $x$ not in the training set.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a426ffc-5bf8-4930-8c0c-1d9a52fa19be",
+   "metadata": {},
+   "source": [
+    "> <i>This constrained negative gradient $h(x; a_m)$ is used in place of the unconstrained one in the steepest-descent strategy. Specifically, the line search is performed\n",
+    "<br/>\n",
+    "<br/>\n",
+    "$\\rho_m = \\text{argmin}_{\\rho} \\sum_i^N L(y_i, F_{m - 1}(x_i) - \\rho h(x_i; a_m))$\n",
+    "<br/>\n",
+    "<br/>\n",
+    "and the approximation updated\n",
+    "<br/>\n",
+    "<br/>\n",
+    "$F_m(x) = F_{m-1}(x) + \\rho_m h(x; a_m)$\n",
+    "<br/>\n",
+    "<br/>\n",
+    "Basically, instead of obtaining the solution under a smoothness constraint, the constraint is applied to the unconstrained (rough) solution by fitting $h(x; a)$ to the \"pseudo-responses\" $\\{ \\tilde{y_i} = -g_m(x_i)\\}_{i=1}^N$. This permits the replacement for the difficult function minimization problem by least-squares function minimization, followed by only a single parameter optimization based on the original criterion. Thus, for any $h(x; a)$ for this a feasible least-squares algorithm exists for solving $a_m = \\text{argmin}_{a, \\beta} \\sum_i^N [-g_m(x) - \\beta h(x_i; a)]^2$, one can use this approach to minimize any differential loss $L(y, F)$ in conjunction with forward stagewise additive modeling.\n",
+    "    \n",
+    "The uncontrained so-called \"rough\" solution is using the training gradient values (the value from calculating the deriative of the loss function). These values are what Friedman calls the \"pseudo-responses\". I mean, it's not the response value itself (which is $y$). But it's obtained after feeding our $y$ into the loss function and taking the first derivative."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ed57fd7-8046-41aa-ae04-49cb29186322",
+   "metadata": {},
+   "source": [
+    "><i>This leads to the following (generic) algorithm using steepest-descent.\n",
+    "<br />\n",
+    "$F_0(x) = \\text{argmin}_{\\rho} \\sum_i^N L(y_i, \\rho)$\n",
+    "<br />\n",
+    "For $m=1$ to M do:\n",
+    "<br />\n",
+    "&nbsp; &nbsp; &nbsp; &nbsp; $y_i = - \\big[ \\frac{\\partial L(y_i, F(x_i)}{\\partial F(x_i)} \\big]_{F(x) = F_{m-1}(x)}$, over $i=1, N$\n",
+    "<br />\n",
+    "&nbsp; &nbsp; &nbsp; &nbsp;  $a_m = \\text{argmin}_{a, \\beta} \\sum_i^N [\\tilde{y_i} - \\beta h(x_i; a)]^2$\n",
+    "<br />\n",
+    "&nbsp; &nbsp; &nbsp; &nbsp;  $\\rho_m = \\text{argmin}_{\\rho} \\sum_i^N L(y_i, F_{m-1}(x_i) + \\rho h(x_i; a_m))$\n",
+    "<br />\n",
+    "&nbsp; &nbsp; &nbsp; &nbsp;  $F_m(x) = F_{m - 1}(x) + \\rho_m h(x; a_m)$\n",
+    "<br />\n",
     "</i>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8978fd1-7dac-4390-aa06-dbef7d3239f2",
+   "metadata": {},
+   "source": [
+    "💻 Let's implement this now. For the loss, we will use least squares."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97c56dfc-f95b-424d-9e4d-4b33176c77dc",
+   "id": "30eadc35-bb47-4398-aeaf-650869e4cada",
    "metadata": {},
    "outputs": [],
    "source": []
