--- a/greedy_function_approximation_a_gradient_boosting_machine.ipynb
+++ b/greedy_function_approximation_a_gradient_boosting_machine.ipynb
@@ -14,8 +14,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b172d037-6bec-47b9-bcba-d0c744e7089f",
+   "metadata": {},
+   "source": [
+    "# Executive Summary\n",
+    "\n",
+    "Most machine learning algorithms by finding the best parameter values for a loss function and training dataset. Gradient descent is typically used to solve this. This works (roughly) as follows:\n",
+    "\n",
+    "(1) Fetch the true value for the given training example\n",
+    "\n",
+    "(2) Compute a predicted value for the given training example\n",
+    "\n",
+    "(3) Compute the loss given the true value and predicted value\n",
+    "\n",
+    "(4) Compute the gradient of the loss with respect to the parameters\n",
+    "\n",
+    "In this paper step (2) is left as an unknown and the gradient is learned from data instead. This is done by setting up a supervised machine learing problem of the following:\n",
+    "\n",
+    "Training data = $\\{\\tilde{y_i}, x_i\\}_i^N$ \n",
+    "\n",
+    "where $\\tilde{y_i}$ is the gradient of the loss with respect to the prediction value evaluated at the _previous_ prediction value. Least squares is chosen as the cost function. Learning the gradient is repeated at each step."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "79267e60-984d-458b-84fe-a399ffe0b780",
    "metadata": {},
    "outputs": [],
@@ -23,6 +47,14 @@
     "from IPython.display import Image\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "601ab196-ebea-4389-85f8-2e58ea04cf1e",
+   "metadata": {},
+   "source": [
+    "# Full Paper"
    ]
   },
   {
@@ -974,16 +1006,65 @@
    "id": "d8978fd1-7dac-4390-aa06-dbef7d3239f2",
    "metadata": {},
    "source": [
-    "💻 Let's implement this now. For the loss, we will use least squares."
+    "💻 Let's implement this now. For the loss, we will use least squares. We will rely on JAX for computing the gradient of an arbitrary function (a loss function in our case). For those not familar with JAX, the quick summary is this: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "30eadc35-bb47-4398-aeaf-650869e4cada",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class GBM():\n",
+    "    def __init__(self,\n",
+    "                 loss_fn,\n",
+    "                 booster,\n",
+    "                 n_boost,\n",
+    "                 step_size=0.001):\n",
+    "        \n",
+    "        self.n_boost = n_boost\n",
+    "        self.lr = lr\n",
+    "        self.booster = booster\n",
+    "        self.booster_models = []\n",
+    "    \n",
+    "    def fit(self, X, y):\n",
+    "        \n",
+    "        self.prior = np.mean(y)\n",
+    "        y_hat = self.prior\n",
+    "        \n",
+    "        for _ in range(self.n_boost):\n",
+    "            \n",
+    "            # Learn the gradient function\n",
+    "            model = self.booster()\n",
+    "            model.fit(X, y_hat)\n",
+    "            \n",
+    "            # Predict gradient values\n",
+    "            grad_hat = model.predict(X)\n",
+    "            \n",
+    "            # Take a step such that loss function\n",
+    "            # is getting smaller\n",
+    "            y_hat = y_hat - step_size * grad_hat\n",
+    "            \n",
+    "            # Save model for future inferences\n",
+    "            self.booster_models.append(model)\n",
+    "            \n",
+    "    def predict(self, X):\n",
+    "        \n",
+    "        y_hat = self.prior\n",
+    "        \n",
+    "        for i in range(self.n_boost):\n",
+    "            \n",
+    "            # Fetch the learned gradient function\n",
+    "            model = self.booster_models[i]\n",
+    "            \n",
+    "            model.predict(X, y_hat)\n",
+    "            grad_hat = model(X)\n",
+    "            \n",
+    "            y_hat = y_hat - step_size * grad_hat\n",
+    "            \n",
+    "        return y_hat"
+   ]
   }
  ],
  "metadata": {
