--- a/greedy_function_approximation_a_gradient_boosting_machine.ipynb
+++ b/greedy_function_approximation_a_gradient_boosting_machine.ipynb
@@ -39,13 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "79267e60-984d-458b-84fe-a399ffe0b780",
    "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import Image\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.base import clone\n",
     "import numpy as np"
    ]
   },
@@ -1011,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "30eadc35-bb47-4398-aeaf-650869e4cada",
    "metadata": {},
    "outputs": [],
@@ -1023,21 +1024,33 @@
     "                 n_boost,\n",
     "                 step_size=0.001):\n",
     "        \n",
+    "        # Hyperparams\n",
     "        self.n_boost = n_boost\n",
     "        self.lr = lr\n",
     "        self.booster = booster\n",
+    "        \n",
+    "        # Set during fit\n",
+    "        # But set here for visibility sake\n",
+    "        self.prior = None\n",
     "        self.booster_models = []\n",
     "    \n",
     "    def fit(self, X, y):\n",
     "        \n",
     "        self.prior = np.mean(y)\n",
-    "        y_hat = self.prior\n",
+    "\n",
+    "        y_hat = np.full((X.shape[0],), self.prior)\n",
     "        \n",
     "        for _ in range(self.n_boost):\n",
     "            \n",
-    "            # Learn the gradient function\n",
-    "            model = self.booster()\n",
-    "            model.fit(X, y_hat)\n",
+    "            # Clone a model for this round\n",
+    "            model = clone(self.booster)\n",
+    "            \n",
+    "            # TODO: Use JAX to calculate gradient from known values\n",
+    "            # grad(loss_fn, y, y_hat)\n",
+    "            y_train = None\n",
+    "            \n",
+    "            # Build a model that learns gradient\n",
+    "            model.fit(X, y_train)\n",
     "            \n",
     "            # Predict gradient values\n",
     "            grad_hat = model.predict(X)\n",
@@ -1051,17 +1064,18 @@
     "            \n",
     "    def predict(self, X):\n",
     "        \n",
-    "        y_hat = self.prior\n",
+    "        y_hat = np.full((X.shape[0],), self.prior)\n",
     "        \n",
     "        for i in range(self.n_boost):\n",
     "            \n",
     "            # Fetch the learned gradient function\n",
     "            model = self.booster_models[i]\n",
     "            \n",
-    "            model.predict(X, y_hat)\n",
-    "            grad_hat = model(X)\n",
+    "            # Make a prediction\n",
+    "            grad_hat = model.predict(X, y_hat)\n",
     "            \n",
-    "            y_hat = y_hat - step_size * grad_hat\n",
+    "            # Take step\n",
+    "            y_hat = y_hat - self.step_size * grad_hat\n",
     "            \n",
     "        return y_hat"
    ]
