--- a/greedy_function_approximation_a_gradient_boosting_machine.ipynb
+++ b/greedy_function_approximation_a_gradient_boosting_machine.ipynb
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 120,
    "id": "30eadc35-bb47-4398-aeaf-650869e4cada",
    "metadata": {},
    "outputs": [],
@@ -1045,8 +1045,10 @@
     "        y = y.astype('float')\n",
     "        \n",
     "        self.prior = np.mean(y)\n",
-    "\n",
-    "        y_hat = np.full((X.shape[0],), self.prior)\n",
+    "                \n",
+    "        y_hat = np.random.normal(loc=self.prior,\n",
+    "                                 scale=.01,\n",
+    "                                 size=X.shape[0])\n",
     "        \n",
     "        for _ in range(self.n_boost):\n",
     "            \n",
@@ -1071,7 +1073,9 @@
     "            \n",
     "    def predict(self, X):\n",
     "        \n",
-    "        y_hat = np.full((X.shape[0],), self.prior)\n",
+    "        y_hat = np.random.normal(loc=self.prior,\n",
+    "                                 scale=.01,\n",
+    "                                 size=X.shape[0])\n",
     "        \n",
     "        for i in range(self.n_boost):\n",
     "            \n",
@@ -1085,6 +1089,29 @@
     "            y_hat = y_hat - self.step_size * grad_hat\n",
     "            \n",
     "        return y_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "f8967311-ffc5-49b3-9ae5-f75d3ad32ecd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.48032105, 0.49765039, 0.49688032, 0.49033319, 0.50916939,\n",
+       "       0.49103159, 0.50736474, 0.50568489, 0.51733315, 0.4956417 ,\n",
+       "       0.4960417 , 0.49587451])"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.normal(loc=.5, scale=.01, size=12)"
    ]
   },
   {
@@ -1136,18 +1163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 122,
    "id": "474f30b2-2c13-49cb-a425-431521450713",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.55231106, 0.55231106, 0.55231106, 0.55231106, 0.55231106,\n",
-       "       0.55231106, 0.55231106, 0.55231106, 0.55231106, 0.55231106])"
+       "array([0.68265709, 0.67526008, 0.66892093, 0.6780295 , 0.67738583,\n",
+       "       0.68410799, 0.66604171, 0.68677988, 0.68817335, 0.67889928])"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,7 +1190,7 @@
     "\n",
     "model = GBM(loss_fn=logistic_loss_fn,\n",
     "            booster=DecisionTreeRegressor(),\n",
-    "            n_boost=10,\n",
+    "            n_boost=30,\n",
     "            step_size=0.01)\n",
     "\n",
     "model.fit(X, y)\n",
