--- a/greedy_function_approximation_a_gradient_boosting_machine.ipynb
+++ b/greedy_function_approximation_a_gradient_boosting_machine.ipynb
@@ -1722,15 +1722,25 @@
     ">\n",
     "> $h(x; \\{b_j, R_j\\}_1^J) = \\sum_j^J b_j1 (x \\in R_j)$\n",
     "\n",
-    "This means the function maps an example to a leaf node. Each leaf is a partition of feature space where these partitions do not overlap. The $b_j$ is the value you get at the $jth$ leaf. The $1 (x \\in R_j)$ is just an indicator function. So if $x$ falls in the $R_j$ region it becomes $1$, otherwise its 0. So to summarize:\n",
+    "We have already been doing this, we have been choosing our base learners to be CART (classification and regression trees) models. In fact, CART (classification and regression trees) were invented by Jerome Friedman. This <a href=\"https://www.youtube.com/watch?v=8hupHmBVvb0\">video</a> is short neat history by Friedman himself on how he invented CART. When we arrive at the last node with all these features, we take all the labels associated with the training examples in that region--and we take the average of them.\n",
     "\n",
-    "If $x$ in $R_j$ then return $b_j$"
+    "What are the parameters of this model? Well it's a collection of the splitting variables and the split values themselves. We can calculate the information storage of this model. Let's say we have p features. Well, the number of distinct representations is given by:\n",
+    "\n",
+    "$2^b = p$ where $b$ is the number of bits we need and $p$ is all the possible features we might have. Solving:\n",
+    "\n",
+    "$b = log_2(p)$. Now let's store each split value as a float. This requires 32 bits. So for a given node, we have:\n",
+    "\n",
+    "$\\text{number of bits} = 32 * log_2(p)$\n",
+    "\n",
+    "But how many nodes? Assuming each branch leads to a total depth, we get: \n",
+    "\n",
+    "$\\text{bits(p, max_depth)} = 32 * log_2(p) * 2^{\\text{max_depth}}$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f5ff599-97b9-47e0-90e9-5d7f56ed707f",
+   "id": "4dff11ae-efcb-4b68-8692-14bf1971f392",
    "metadata": {},
    "outputs": [],
    "source": []
