--- a/greedy_function_approximation_a_gradient_boosting_machine.ipynb
+++ b/greedy_function_approximation_a_gradient_boosting_machine.ipynb
@@ -1017,7 +1017,7 @@
    "id": "d8978fd1-7dac-4390-aa06-dbef7d3239f2",
    "metadata": {},
    "source": [
-    "💻 Let's implement this now. We will calculate the gradients manually. But to support general loss functions, we would need to rely on a package like <a href=\"https://jax.readthedocs.io/en/latest/index.html#\">jax</a>. We will gradually build up our class thoughout the paper to add all the loss functions covered.\n",
+    "💻 Let's implement this now. We will calculate the gradients manually. But to support general loss functions, we would need to rely on a package like <a href=\"https://jax.readthedocs.io/en/latest/index.html#\">jax</a>.\n",
     "\n",
     "Our first step is to get some data to try our algorithm on. Let's leverage sklearn for this."
    ]
@@ -1738,12 +1738,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4dff11ae-efcb-4b68-8692-14bf1971f392",
+   "cell_type": "markdown",
+   "id": "3528ecbb-d012-4582-9620-89a568d8fab8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "> <i>Here $\\{R_j\\}_1^J$ are disjoint regions that collectively cover the space of all joint values of the predictor variables $\\bf{x}$. These regions are represented by the terminal nodes of the corresponding tree. The indicator function 1(.) has the value 1 if its argument is true, and zero otherwise.. The \"paramaters\" of this base learner (15) are the coefficients $\\{b_j\\}_1^J$, and the quantities that define the boundaries of the regions $\\{R_j\\}_1^J$. These are the splitting variables and the values of those variables that represent the splits at the nonterminal nodes of the tree. Because the regions are disjoint, (15) is equivalent to the prediction rule: if $x \\in R_j$ then $h(x) = b_j$.</i>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49716254-7d78-4c55-80d8-22a34d6d71bf",
+   "metadata": {},
+   "source": [
+    "The tree creates non-overlapping regions in feature space. Each feature vector gets mapped to a distinct region. And the prediction will be an average all the labels in that region (as defined by the training data). So we will end up with an equation like:\n",
+    "\n",
+    "$F_m(x) = F_{m-1}(x) + \\rho_m \\sum_{j=1}^J b_{jm} 1(x \\in R_{jm})$\n",
+    "\n",
+    "This is when the author points our that $\\rho_m$ can be \"brought in\" to the node region itself, by making a new definition of $\\gamma_{jm} = \\rho_m b_{jm}$. So we get:\n",
+    "\n",
+    "$F_m(x) = F_{m-1}(x) + \\sum_{j=1}^J \\gamma_{jm} 1(x \\in R_{jm})$\n",
+    "\n",
+    "Now, we no longer have to learn a parameter value that must work across all the leafs. What is the optimal $\\gamma_{jm}$? at a given $m$? We consult our loss function to find it:\n",
+    "\n",
+    "$\\vec{\\gamma_{jm}} = \\text{argmin}_{\\gamma_{jm}} \\sum_i^N L \\big( y_i, F_{m-1}(x) + \\sum_{j=1}^J \\gamma_{jm} 1(x \\in R_{jm}) \\big)$\n",
+    "\n",
+    "We have to calculate $J$ different values in the optimization setup. But, a key insight here is that a given example maps to a unique leaf. Thus, we can break this up into $J$ independent optimization problems:\n",
+    "\n",
+    "$\\gamma_{jm} = \\text{argmin}_{\\gamma} \\sum_{i \\in R_{jm}} L \\big( y_i, F_{m-1}(x) + \\gamma \\big)$\n",
+    "\n",
+    "Suppose the loss is $|y - F(x)|$ (least absolute deviation). Recall the solution to minimize\n",
+    "\n",
+    "$J(\\alpha) = \\sum_i^N |x_i - \\alpha|$ is the median value of $x$.\n",
+    "\n",
+    "$\\gamma_{jm} = \\text{argmin}_{\\gamma} \\sum_{i \\in R_{jm}} |y_i - F_{m-1}(x) - \\gamma |$\n",
+    "\n",
+    "So the 'best' leaf value is calculating the residual of each ($y - \\hat{y}$) in each leaf and takings it median. What might not be clear at this point, is how we do build the tree?"
+   ]
   }
  ],
  "metadata": {
